--- a/style.css
+++ b/style.css
@@ -7,58 +7,82 @@
     --c-primary-font:  'Inter', Arial, sans-serif;
 }
 
-html, h1, h2, p {
+html {
+    font-size: 16px; /* Base font size */
+}
+
+html, h1, h2, h3, h4, p, .subtitle-1, .subtitle-2, .c-body-l, .c-body-xl {
     font-family: var(--c-primary-font);
+    letter-spacing: 0em;
 }
 
-.c-btn {
-    background-color: var(--c-light-green);
-    border: 1pc solid var(--c-light-green);
-    padding: 16px, 24px, 16px, 24px;
-    border-radius: 8px;
-    color: var(--c-dark-green);
+h2, h3, h4, .subtitle-1, .subtitle-2 {
+    font-weight: 300;
 }
 
-.c-light-green-text {
-    color: var(--c-light-green);
+.c-body-l, .c-body-xl {
+    font-weight: 400;
 }
 
 h1 {
-    font-size: 64px;
+    font-size: 4em; /* Equivalent to 64px / 16px */
     font-weight: 200;
-    line-height: 77px;
-    letter-spacing: 0em;
+    line-height: 120%;
     text-align: left;
 }
 
 h2 {
-    font-family: var(--c-primary-font);
-    font-size: 56px;
-    font-weight: 300;
-    line-height: 62px;
-    letter-spacing: 0em;
+    font-size: 3.5em; /* Equivalent to 56px / 16px */
+    line-height: 110%;
     text-align: center;
     color: #fff;
 }
 
-.c-body-l {
-    font-family: var(--c-primary-font);
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 31px;
-    letter-spacing: 0em;
+h3 {
+    font-size: 3em; /* Equivalent to 48px / 16px */
+    line-height: 100%;
+    text-align: center;
+    color: #fff;
+}
+
+h4 {
+    font-size: 2em; /* Equivalent to 32px / 16px */
+    font-weight: 300;
+    line-height: 105%;
+    text-align: center;
+    color: #fff;
+}
+
+
+.subtitle-1 {
+    font-size: 1.5em; /* Equivalent to 24px / 16px */
+    line-height: 100%;
+    text-align: left;
+}
+
+.subtitle-2 {
+    font-size: 1em; /* Equivalent to 16px / 16px */
+    line-height: 100%;
     text-align: left;
 }
 
 
+.c-body-l {
+    font-size: 1.5em; /* Equivalent to 24px / 16px */
+    font-size: 24px;
+    line-height: 130%;
+    text-align: left;
+}
 
 .c-body-xl {
-    font-family: var(--c-primary-font);
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 39px;
+    font-size: 2em; /* Equivalent to 32px / 16px */
+    line-height: 120%;
     letter-spacing: 0em;
     text-align: center;
+}
+
+.c-light-green-text {
+    color: var(--c-light-green);
 }
 
 .c-align-left {
@@ -67,6 +91,15 @@ h2 {
 
 .c-align-center {
     text-align: center;
+}
+
+
+.c-btn {
+    background-color: var(--c-light-green);
+    border: 1pc solid var(--c-light-green);
+    padding: 16px, 24px, 16px, 24px;
+    border-radius: 8px;
+    color: var(--c-dark-green);
 }
 
 .c-step-pill {
