--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@
     --c-dark-green: #031519;
     --c-dark-green-2: #112C32;
     --c-primary-font:  'Inter', Arial, sans-serif;
+    --c-primary-text-color: #fff;
 }
 
 html {
     font-size: 16px; /* Base font size */
+    background-color: var(--c-dark-green);
+    color: var(--c-primary-text-color);
 }
 
 html, h1, h2, h3, h4, p, .subtitle-1, .subtitle-2, .c-body-l, .c-body-xl {
@@ -92,6 +95,18 @@ h4 {
 .c-align-center {
     text-align: center;
 }
+
+.mg-horizontal {
+    margin-left: 8vw;
+    margin-right: 8vw;
+}
+
+.text-block {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 795px;
+}
+
 
 
 .c-btn {
