--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 }
 
 html, body {
+    margin: 0;
+    padding: 0;
     font-size: 16px; /* Base font size */
     background-color: var(--c-dark-green);
     color: var(--c-primary-text-color);
@@ -81,7 +83,7 @@ h4 {
     font-size: 2em; /* Equivalent to 32px / 16px */
     line-height: 120%;
     letter-spacing: 0em;
-    text-align: center;
+    text-align: left;
 }
 
 .c-light-green-text {
@@ -111,26 +113,88 @@ h4 {
 
 .c-btn {
     background-color: var(--c-light-green);
-    border: 1pc solid var(--c-light-green);
+    border: 1px solid var(--c-light-green);
     padding: 16px, 24px, 16px, 24px;
     border-radius: 8px;
     color: var(--c-dark-green);
 }
 
-.c-step-pill {
-    padding: 10px, 24px, 10px, 24px;
+.c-btn-secondary {
+    border: 3px solid var(--c-light-green);
+    color: var(--c-light-green);
+    padding: 15px 32px;
+    border-radius: 16px;
+}
+
+.c-pill {
+    background-color: var(--c-light-green);
+    border: 1px solid var(--c-light-green);
     border-radius: 63px;
+    padding: 12px 24px;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--c-dark-green);
+    width:fit-content;
+}
+
+.c-step-pill {
+    padding: 10px 24px;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
-    text-align: center;
 }
 
 /* SECTIONS */
 
+header, #steps, #features {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 header {    
     background: linear-gradient(102.63deg, #031519 11.92%, #112C32 181.82%);
     color: var(--c-primary-text-color);
+    min-height: 720px;
+    margin-left: 8vw;
+}
+
+header .col-1, header .col-2 {    
+    flex-basis: 50%;
+}
+
+#steps {
+    min-height: 890px;
+    flex-direction: column;
+    margin-left: 8vw;
+    margin-right: 8vw;
+}
+
+#steps-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    gap: 2%;
+
+}
+
+#steps .c-pill {
+    padding: 8px 24px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+}
+
+#features {
+    min-height: 1200px;
+}
+
+.c-card {
+    background-color: var(--c-dark-green-2);
+    padding: 48px 20px;
+    border-radius: 16px;
+    flex-basis: 33%;
 }
 
 
