--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,16 @@ h4 {
     text-align: center;
 }
 
-.mg-horizontal {
+.c-mg-horizontal {
     margin-left: 8vw;
+    margin-right: 8vw;
+}
+
+.c-mg-left {
+    margin-left: 8vw;
+}
+
+.c-mg-right {
     margin-right: 8vw;
 }
 
@@ -108,7 +116,6 @@ h4 {
     margin-right: auto;
     max-width: 795px;
 }
-
 
 
 .c-btn {
@@ -146,7 +153,7 @@ h4 {
 
 /* SECTIONS */
 
-header, #steps, #features {
+header, #steps, #answer-questionnaire {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,8 +173,8 @@ header .col-1, header .col-2 {
 #steps {
     min-height: 890px;
     flex-direction: column;
-    margin-left: 8vw;
-    margin-right: 8vw;
+    /*margin-left: 8vw;
+    margin-right: 8vw;*/
 }
 
 #steps-container {
@@ -187,11 +194,69 @@ header .col-1, header .col-2 {
 }
 
 #features {
-    min-height: 1200px;
+    min-height: 1000px;
+    /*margin-left: 8vw;
+    margin-right: 8vw;*/
+}
+
+#features-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: start;
+    gap: 1%;
+    row-gap: 5%;
+}
+
+.features-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    border-radius: 16px;
+    background-color: var(--c-dark-green-2);
+    flex-basis: 32%;
+    padding: 32px;
+    height: 370px;
+    margin-bottom: 10px;
+}
+
+.features-card p {
+    color: var(--c-primary-text-color);
+    font-size: 22px;
+}
+
+.gumroad-cover {
+    height: 370px;
+    width: auto;
 }
 
 #answer-questionnaire {
     min-height: 890px;
+    flex-direction: column;
+}
+
+#answer-questionnaire .c-pill {
+    background-color: var(--c-dark-green-2);
+    color: var(--c-light-green);
+    border: 1px solid var(--c-dark-green-2);
+    border-radius: 16px;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    padding: 32px;
+}
+
+#answer-questionnaire .c-pill span {
+    text-wrap: nowrap;
+    white-space: nowrap;
+}
+
+#answer-questionnaire p {
+    max-width: 800px;
 }
 
 #project-types-container {
